--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Муниципальное бюджетное учреждение дополнительного профессионального образования «Учебно-методический образовательный центр» городского округа Щёлково</h1>
-<p>+7&nbsp;496&nbsp;566-80-39, +7&nbsp;496&nbsp;566-97-00</p>
-<p>metodcentr1@yandex.ru</p>
+<h1>Муниципальное бюджетное учреждение дополнительного профессионального образования<br>«Учебно-методический образовательный центр»<br>городского округа Щёлково</h1>
+<p><a href="tel:+74965668039">+7&nbsp;496&nbsp;566-80-39</a>, <a href="tel:+74965669700">+7&nbsp;496&nbsp;566-97-00</a></p>
+<p><a href="mailto:mc@mcntr.ru">mc@mcntr.ru</a></p>
 <p>141108, Московская область, город Щелково, Первомайская улица, дом&nbsp;12А</p>
-<p><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3bc96a70bf0eb8ed75e640d134c12d35e13e0f25cc28571c6c1b89c680a3263c&amp;width=100%25&amp;height=600&amp;lang=ru_RU&amp;scroll=true"></script></p>
+<p><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3bc96a70bf0eb8ed75e640d134c12d35e13e0f25cc28571c6c1b89c680a3263c&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script></p>
 </body>
 </html>
