--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta charset="utf-8">
+	<title>Учебно-методический образовательный центр</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
 <body>
 <h1><small>Муниципальное бюджетное учреждение дополнительного профессионального образования</small>
 <br>«Учебно-методический образовательный центр»
