--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-<h1><small>Муниципальное бюджетное учреждение дополнительного профессионального образования</small>
+<h1>Муниципальное бюджетное учреждение дополнительного профессионального образования
 <br>«Учебно-методический образовательный центр»
-<small><br>городского округа Щёлково</small></h1>
+<br>городского округа Щёлково</h1>
 <p><a href="tel:+74965668039">+7&nbsp;496&nbsp;566-80-39</a>, <a href="tel:+74965669700">+7&nbsp;496&nbsp;566-97-00</a></p>
 <p><a href="mailto:mc@mcntr.ru">mc@mcntr.ru</a></p>
 <p>141108, Московская область, город Щелково, Первомайская улица, дом&nbsp;12А</p>
