--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-<h1><span style="font-size:50%;">Муниципальное бюджетное учреждение дополнительного профессионального образования</span>
-<br>«Учебно-методический образовательный центр»
-<span style="font-size:50%;"><br>городского округа Щёлково</span></h1>
+<p>Муниципальное бюджетное учреждение дополнительного профессионального образования</p>
+<h1>«Учебно-методический образовательный центр»</h1>
+<p>городского округа Щёлково</p>
 <p><a href="tel:+74965668039">+7&nbsp;496&nbsp;566-80-39</a>, <a href="tel:+74965669700">+7&nbsp;496&nbsp;566-97-00</a></p>
 <p><a href="mailto:mc@mcntr.ru">mc@mcntr.ru</a></p>
 <p>141108, Московская область, город Щелково, Первомайская улица, дом&nbsp;12А</p>
